--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <title>CBJr.</title>
+
+    <!-- font awesome cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>CBJr.</title>
+
+    <!-- custom css file link -->
+    <link rel="stylesheet" href="style.css"/>
+
 </head>
 <body>
+
     <!-- header section starts -->
 
     <header>
@@ -34,5 +41,27 @@
 
      <!-- header section ends -->
       
+     <!-- home section starts-->
+
+     <section class="home" id="home">
+
+        <div class="content">
+            <h3>Charlie Brown Jr.</h3>
+            <span> melhor banda do Brasil </span>
+            <p>Charlie Brown Jr. foi uma das bandas mais icônicas do rock nacional, misturando influências do skate punk, reggae e hip-hop. Com letras marcantes, abordavam temas como liberdade, amizade e desafios da vida.
+
+                O grupo, liderado por Chorão, conquistou uma legião de fãs com sua autenticidade e energia nos palcos. Sucessos como "Só os Loucos Sabem" e "Proibida Pra Mim" marcaram gerações e continuam sendo ouvidos até hoje.
+                
+                Mesmo após o fim da banda, seu legado permanece vivo na música brasileira. As mensagens de superação e rebeldia ainda ressoam com o público, inspirando novas gerações de artistas e fãs.</p>
+            <a href="#" class="btn">Veja mais</a>
+        </div>
+
+     </section>
+
+     <!-- home section ends-->
+
+
+
+
 </body>
 </html>
